--- a/_config.yml
+++ b/_config.yml
@@ -5,12 +5,12 @@
 # NOTE: it looks like you need to rebuild + repush everytime you update this _config.yml file
 
 ### Site Settings ###
-title               : IS445 Jekyll Template 
+title               : Yifan Xu
 description         : >-
-                      I am definitely not a corgi!
+                      Hi, it's Yifan here!
 baseurl             : ""   # Change to empty quotes if you are hosting your site at <your-username>.github.io directly,
 #                                             otherwise will be hosted at <your-username>.github.io/{{base_url}}
-repository          :                     # Change to <your-username> for github OR, if that doesn't work <your-username>/<your-username>.github.io (or remove it if you don't need remote projects) -- for example, I would put "jnaiman" without the quotes after the ":" here
+repository          : yfxuyeah                    # Change to <your-username> for github OR, if that doesn't work <your-username>/<your-username>.github.io (or remove it if you don't need remote projects) -- for example, I would put "jnaiman" without the quotes after the ":" here
 open_new_tab        : false                             # Opens external URLs in new tab (works for posts, projects and navbar only)
 
 
@@ -34,13 +34,13 @@ nav_exclude:                                            # The following paths ar
 
 ### Author Info ###
 author:
-  name              : A. P. Corgi
-  image             : https://media.tenor.com/8RcIoWTKYR4AAAAe/scuze-corgi.png
+  name              : Yifan Xu
+  image             : ./assets/pngs/selfie.jpeg    # Path to your author image
 #  behance           : your_username
 # dribbble          : your_username
-  email             : username@domain.com
+  email             : yx52@illinois.edu
 #  facebook          : your_username
-  github            : jnaiman # JPN
+  github            : yfxuyeah # JPN
 # gitlab            : your_username
 # instagram         : your_username
 # kaggle            : your_username
@@ -51,9 +51,9 @@ author:
 # stackoverflow     : your_user_id
 # tumblr            : your_username.tumblr.com
 #  twitch            : your_username
-  twitter           : your_username
+# twitter           : your_username
 #  vimeo             : your_username
-  youtube           : your_channel_name
+# youtube           : your_channel_name
 # keybase           : your_username
 
 
